Fixes button alignment in Chrome

--- a/tapjoyads/app/assets/stylesheets/api/style.scss
+++ b/tapjoyads/app/assets/stylesheets/api/style.scss
@@ -752,6 +752,9 @@ body.old .content_box {
     .video_complete {
       margin-top: .5em;
 
+      > a {
+        display: inline-table;
+      }
       .slider {
         display: inline-table;
       }
